edited design + added branding

--- a/src/style.css
+++ b/src/style.css
@@ -6,22 +6,22 @@
   --fs-700: 2rem;
 
   --ff-body: "Roboto", sans-serif;
-  --ff-heading: "Playfair Display", serif;
+  --ff-heading: "Roboto", sans-serif;
 
   --fw-400: 400;
   --fw-700: 700;
   --fw-900: 900;
 
-  --clr-primary-200: hsla(169, 70%, 95%, 1);
-  --clr-primary-300: hsla(169, 100%, 39%, 1);
-  --clr-primary-400: hsla(169, 100%, 26%, 1);
-  --clr-primary-500: hsla(169, 100%, 16%, 1);
+  --clr-primary-200: #343a40; /* featured Articles Backgroud*/
+  --clr-primary-300: #008000; /* not in use */
+  --clr-primary-400: #008000; /* hover / focus */
+  --clr-primary-500: #38b000; /* titel / footer */
 
-  --clr-neutral-100: hsla(0, 0%, 100%, 1);
-  --clr-neutral-300: hsla(0, 0%, 50%, 1);
-  --clr-neutral-400: hsla(0, 0%, 40%, 1);
-  --clr-neutral-500: hsla(0, 0%, 60%, 1);
-  --clr-neutral-900: hsla(0, 0%, 10%, 1);
+  --clr-neutral-100: #212529; /* body bg / text footer + button */
+  --clr-neutral-300: #6c757d; /* text accents */
+  --clr-neutral-400: #495057; /* not in use */
+  --clr-neutral-500: #6c757d; /* not in use */
+  --clr-neutral-900: #adb5bd; /* text */
 }
 
 @media (min-width: 35em) {
@@ -77,6 +77,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background: var(--clr-neutral-100);
 }
 
 /* A elements that don't have a class get default styles */
@@ -124,7 +125,6 @@ body {
   font-size: var(--fs-400);
   color: var(--clr-neutral-900);
 }
-
 h1,
 h2,
 h3 {
