--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
 <body>
