modified:   .eleventy.js 	modified:   package-lock.json 	modified:   package.json 	modified:   public/assets/blog/javatictactoe_img1.png 	modified:   src/_includes/article-snippet.njk 	modified:   src/_includes/article.njk 	modified:   src/_includes/base.njk 	modified:   src/_includes/footer.njk 	modified:   src/_includes/header.njk 	modified:   src/blog/2022-11-07-javatictactoe.md 	modified:   src/index.njk 	modified:   src/style.css

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tim Heidler | {{ title }}</title>
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon" />
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    </head>
-<body>
-
+  </head>
+  <body>
     {% include "header.njk" %}
     <main>
-    {{ content | safe }}
+      {{ content | safe }}
     </main>
     {% include "footer.njk" %}
 
     <script>
-        if (window.netlifyIdentity) {
-            window.netlifyIdentity.on("init", user => {
-            if (!user) {
-                window.netlifyIdentity.on("login", () => {
-                document.location.href = "/admin/";
-                });
-            }
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
             });
-        }
+          }
+        });
+      }
     </script>
-
-</body>
+  </body>
 </html>
