--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -1,22 +1,15 @@
 ---
-layout: 'base.njk'
+layout: "base.njk"
 ---
 
 <article class="main-article">
-<div class="container container--narrow flow">
-  
-    <h1 class="article-title">
-      {{ title }}
-    </h1>
+  <div class="container container--narrow flow">
+    <h1 class="article-title">{{ title }}</h1>
     <figure class="main-article__figure">
-      <img src="{{ image }}" alt="{{ imageAlt }}">
-      <figcaption>
-        {{ imageAlt }}
-      </figcaption>
+      <img src="{{ image }}" alt="{{ imageAlt }}" />
+      <figcaption>{{ imageAlt }}</figcaption>
     </figure>
-    
-    {{ content | safe}}
-  
-</div>
-</article>
 
+    {{ content | safe}}
+  </div>
+</article>
