modified:   src/_includes/header.njk 	renamed:    src/blog/about.md -> src/about.md 	modified:   src/admin/config.yml

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="page-header__content">
       <div>
-        <h1>Tim Heidler</h1>
+        <h1 style="font-size:1rem">Tim Heidler</h1>
       </div>
       <nav>
         <ul role="list" class="nav-list flex-group">
@@ -11,6 +11,9 @@
           </li>
           <li>
             <a href="/blog/">Blog</a>
+          </li>
+          <li>
+            <a href="/about/">About</a>
           </li>
         </ul>
       </nav>
