--- a/src/_includes/form.njk
+++ b/src/_includes/form.njk
@@ -1,20 +1,20 @@
-<form method="post" name="Contact Form" data-netlify-recaptcha="true" netlify-honeypot="hpfield" data-netlify="true" id="contact-form">
-<h2>Contact Form</h2>
-<input class="hidden" name="hpfield">
-<p>
-    <label for="name" class="form-label">Name:</label>
-    <input type="text" name="name" id="name">
-</p>
-<p>
-    <label for="email" class="form-label">Email:</label>
-    <input type="email" name="email" id="email">
-</p>
-<p>
-    <label for="comments" class="form-label">Comments:</label><br/>
-    <textarea name="comments" id="comments"></textarea>
-</p>
-<div data-netlify-recaptcha="true"></div>
-<p>
-    <input type="submit">
-</p>
+<form method="post" name="Contact Form" data-netlify-recaptcha="true" netlify-honeypot="hpfield" data-netlify="true" class="contact-form">
+    <h2>Contact Form</h2>
+    <input class="hidden" name="hpfield">
+    <p class="form-p">
+        <label for="name" class="form-label">Name:</label>
+        <input type="text" name="name" id="name" class="form-input">
+    </p>
+    <p class="form-p">
+        <label for="email" class="form-label">Email:</label>
+        <input type="email" name="email" id="email" class="form-input">
+    </p>
+    <p class="form-p">
+        <label for="comments" class="form-label">Comments:</label><br/>
+        <textarea name="comments" id="comments" class="form-input"></textarea>
+    </p>
+    <div data-netlify-recaptcha="true"></div>
+    <p>
+        <input type="submit" class="form-btn">
+    </p>
 </form>
