changed Comments to Message

--- a/src/_includes/form.njk
+++ b/src/_includes/form.njk
@@ -10,8 +10,8 @@
         <input type="email" name="email" id="email" class="form-input">
     </p>
     <p class="form-p">
-        <label for="comments" class="form-label">Comments:</label><br/>
-        <textarea name="comments" id="comments" class="form-input"></textarea>
+        <label for="message" class="form-label">Message:</label><br/>
+        <textarea name="message" id="message" class="form-input"></textarea>
     </p>
     <div data-netlify-recaptcha="true"></div>
     <p>
