--- a/src/style.css
+++ b/src/style.css
@@ -392,6 +392,7 @@ section,
   flex-direction: column;
   align-items: center;
   margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 .form-p{
   width: 75vw;
