--- a/src/_includes/form.njk
+++ b/src/_includes/form.njk
@@ -11,10 +11,10 @@
     </p>
     <p class="form-p">
         <label for="message" class="form-label">Message:</label><br/>
-        <textarea name="message" id="message" class="form-input"></textarea>
+        <textarea name="message" id="message" class="form-input  message"></textarea>
     </p>
     <div data-netlify-recaptcha="true"></div>
     <p>
-        <input type="submit" class="form-btn">
+        <input type="submit" class="form-btn btn btn--primary">
     </p>
 </form>
