--- a/src/index.njk
+++ b/src/index.njk
@@ -8,9 +8,8 @@ layout: "base.njk"
     <div class="hero__content flow">
       <h1 class="section-title">Welcome to my blog!</h1>
       <p>
-        I use this space to document my adventures in front-end development,
-        sharing how I’ve overcome issues I’ve run into, useful resources, and
-        more.
+        I use this space to document my adventures in development, sharing how
+        I’ve overcome issues I’ve run into, useful resources, and more.
       </p>
       <p>
         Below are some of my favourite articles, or you can go to the blog page
@@ -24,7 +23,7 @@ layout: "base.njk"
       </div>
     </div>
     <div>
-      <img src="//unsplash.it/510" alt="" class="hero__image" />
+      <img src="/assets/hero.png" alt="" class="hero__image" />
     </div>
   </div>
 </section>
