--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,4 +1,4 @@
 <footer class="site-footer">
-  <h1 style="font-size: 1rem">Tim Heidler</h1>
+  <span>Tim Heidler</span>
   <p>© 2023 Tim Heidler. All rights reserved.</p>
 </footer>
