--- a/src/_includes/form.njk
+++ b/src/_includes/form.njk
@@ -10,7 +10,7 @@
         <input type="email" name="email" id="email" class="form-input">
     </p>
     <p class="form-p">
-        <label for="message" class="form-label">Message:</label><br/>
+        <label for="message" class="form-label">Message:</label><br>
         <textarea name="message" id="message" class="form-input  message"></textarea>
     </p>
     <div data-netlify-recaptcha="true"></div>
