--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="page-header__content">
       <div>
-        <h1 style="font-size:1rem">Tim Heidler</h1>
+        <span>Tim Heidler</span>
       </div>
       <nav>
-        <ul role="list" class="nav-list flex-group">
+        <ul class="nav-list flex-group">
           <li>
             <a href="/">Home</a>
           </li>
