--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tim Heidler | {{ title }}</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <meta name="description" content="my personal bloging site. I use this space to document my adventures in development, sharing how I've overcome issues I've run into, useful resources, and more.">
   </head>
   <body>
     {% include "header.njk" %}
