--- a/src/index.njk
+++ b/src/index.njk
@@ -23,7 +23,7 @@ layout: "base.njk"
       </div>
     </div>
     <div>
-      <img src="/assets/hero.png" alt="" class="hero__image" />
+      <img src="/assets/hero.png" alt="hero image" class="hero__image" height="510px" width="510px">
     </div>
   </div>
 </section>
@@ -35,7 +35,7 @@ layout: "base.njk"
       Here is a sample of articles which I feel give you a good idea of what
       this site is all about.
     </p>
-    <ul role="list" class="articles__list flow">
+    <ul class="articles__list flow">
       {%- for post in collections.featured | reverse -%} {% include
       "article-snippet.njk" %} {%- endfor -%}
     </ul>
