--- a/src/style.css
+++ b/src/style.css
@@ -53,8 +53,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul:where([role="list"]),
-ol:where([role="list"]) {
+ul,
+ol {
   list-style: none;
   margin: 0;
   padding: 0;
