--- a/src/style.css
+++ b/src/style.css
@@ -53,8 +53,10 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul,
-ol {
+header ul,
+#featured-articles ul,
+header ol,
+#featured-articles ol {
   list-style: none;
   margin: 0;
   padding: 0;
