--- a/src/style.css
+++ b/src/style.css
@@ -54,9 +54,9 @@ dd {
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 header ul,
-#featured-articles ul,
+.articles__list,
 header ol,
-#featured-articles ol {
+.articles__list{
   list-style: none;
   margin: 0;
   padding: 0;
