--- a/src/_includes/article-snippet.njk
+++ b/src/_includes/article-snippet.njk
@@ -13,6 +13,6 @@
       <span>{{post.date | postDate}}</span>
     </p>
     <p class="snippet__body">{{post.data.description}}</p>
-    <a href="{{ post.url}}" class="btn btn--primary">Continue Reading</a>
+    <a href="{{ post.url}}" class="btn btn-primary">Continue Reading</a>
   </article>
 </li>
