--- a/src/_includes/form.njk
+++ b/src/_includes/form.njk
@@ -15,6 +15,6 @@
     </p>
     <div data-netlify-recaptcha="true"></div>
     <p>
-        <input type="submit" class="form-btn btn btn--primary">
+        <input type="submit" class="form-btn btn btn-primary">
     </p>
 </form>
