--- a/src/index.njk
+++ b/src/index.njk
@@ -16,10 +16,10 @@ layout: "base.njk"
         to see my most recent posts.
       </p>
       <div class="flex-group">
-        <a href="#featured-articles" class="btn btn--primary"
+        <a href="#featured-articles" class="btn btn-primary"
           >Featured articles</a
         >
-        <a href="./blog" class="btn btn--neutral">Most recent articles</a>
+        <a href="./blog" class="btn btn-neutral">Most recent articles</a>
       </div>
     </div>
     <div>
