--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,22 +11,25 @@
   </head>
   <body>
     {% include "header.njk" %}
-    <main>
+    <main class="min-h-screen pb-5">
       {{ content | safe }}
     </main>
-    
+
     {% include "footer.njk" %}
-    
 
     <script>
       if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", (user) => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
+        window
+          .netlifyIdentity
+          .on("init", (user) => {
+            if (!user) {
+              window
+                .netlifyIdentity
+                .on("login", () => {
+                  document.location.href = "/admin/";
+                });
+            }
+          });
       }
     </script>
   </body>
