--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,4 +1,11 @@
-<footer class="site-footer">
-  <span>Tim Heidler</span>
-  <p>© 2023 Tim Heidler. All rights reserved.</p>
+<footer class="footer p-10 bg-base-200 text-base-content">
+  <aside>
+    <img src="/assets/favicon.png" width="50" height="50" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd" class="fill-current"/>
+    <p>Tim Heidler<br/>© 2023 Tim Heidler. All rights reserved.</p>
+  </aside>
+  <nav>
+    <header class="footer-title">Me</header>
+    <a class="link link-hover" href="/about">About Me</a>
+    <a class="link link-hover" href="/#contact">Contact</a>
+  </nav>
 </footer>
