--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,22 +1,18 @@
 <div class="navbar bg-base-100">
-  <div class="navbar-start">
-    <div class="dropdown">
-      <label tabindex="0" class="btn btn-ghost btn-circle">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
-      </label>
-      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a class="text-lg" href="/">Home</a></li>
-        <li><a class="text-lg" href="/blog/">Blog</a></li>
-        <li><a class="text-lg" href="/about/">About</a></li>
-      </ul>
-    </div>
+  <div class="flex-1">
+    <a class="btn btn-ghost normal-case text-xl" href="/">Tim Heidler</a>
   </div>
-  <div class="navbar-center">
-    <a href="/" class="btn btn-ghost normal-case text-xl">Tim Heidler</a>
-  </div>
-  <div class="navbar-end">
-    <button class="btn btn-ghost btn-circle">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
-    </button>
+  <div class="flex-none">
+    <ul class="menu menu-horizontal px-1">
+      <li>
+        <a class="text-lg" href="/">Home</a>
+      </li>
+      <li>
+        <a class="text-lg" href="/blog/">Blog</a>
+      </li>
+      <li>
+        <a class="text-lg" href="/about/">About</a>
+      </li>
+    </ul>
   </div>
 </div>
