fixed recaptcha not being centered

--- a/src/_includes/form.njk
+++ b/src/_includes/form.njk
@@ -11,7 +11,9 @@
         <p class="py-1">
             <textarea name="message" id="message" placeholder="Your Message" class="textarea textarea-bordered w-full textarea-lg"></textarea>
         </p>
-        <div data-netlify-recaptcha="true"></div>
+        <div class="sm:w-2/5 m-auto py-1">
+            <div data-netlify-recaptcha="true"></div>
+        </div>
         <p>
             <input type="submit" class="btn btn-primary">
         </p>
