Added GitHub Link to Header

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -11,6 +11,9 @@
         <a class="text-lg" href="/blog/">Blog</a>
       </li>
       <li>
+        <a class="text-lg" href="https://github.com/timplay33">GitHub</a>
+      </li>
+      <li>
         <a class="text-lg" href="/about/">About</a>
       </li>
     </ul>
