--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -15,7 +15,7 @@ layout: "base.njk"
   </div>
 </div>
 <div class="flex justify-center">
-  <div id="markdown" class="w-4/5">
+  <div id="markdown" class="w-4/5 pt-6">
 
     {{ content | safe}}
 
