fixed featured-articles button on index

--- a/src/index.njk
+++ b/src/index.njk
@@ -18,7 +18,7 @@ layout: "base.njk"
 
 <div class="text-center py-6">
   <div>
-    <h2 class="text-3xl font-bold">Featured articles</h2>
+    <h2 id="featured-articles" class="text-3xl font-bold">Featured articles</h2>
     <p class="py-6">
       Here is a sample of articles which I feel give you a good idea of what
       this site is all about.
